# alfred-results

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
src/alfred_path_results/: __init__.py  __main__.py  cli.py  utils.py
src/alfred_path_results/result_item/: __init__.py  args.py  icon.py  item.py  mods.py
src/alfred_results/: __init__.py  __main__.py  cli.py  payload.py  utils.py
src/alfred_results/result_item/: __init__.py  args.py  icon.py  item.py  mods.py
tests/: conftest.py  test_cli.py  test_icon.py  test_item.py  test_mods.py  test_payload.py  test_utils.py
